# mimic

./: Makefile  compose.yaml  pyproject.toml  wsgi.py
src/: factory.py
src/api/: __init__.py
src/api/clients/: routers.py
