[tool.poetry]
name = "mimic"
version = "0.1.0"
description = ""
authors = ["Gabriel Sarmento <gabrielfs.bot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
psycopg = "^3.1.19"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.26.1"

[tool.poe]
envfile = '.env'

[tool.poe.tasks.serve]
shell = 'uvicorn src.factory:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
